# pear-client

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check-rs.yml
examples/basic_hyper/: Cargo.toml  README.md
examples/basic_hyper/src/: main.rs
src/: context.rs  lib.rs  url_util.rs  xml_util.rs
src/client/: http.rs
src/common/: mod.rs  package.rs  release.rs
src/query/: get_package_info.rs  get_package_list.rs  get_release.rs  get_release_list.rs  get_release_list2.rs  mod.rs
test-resources/get_package_info/pecl_protobuf/: input.xml
test-resources/get_package_list/pecl/: input.xml
test-resources/get_release/pecl_protobuf_4.27.0/: input.xml
test-resources/get_release_list/pecl_protobuf/: input.xml
