[package]
name = "pear_client_example_basic_hyper"
edition = "2021"
publish = false

[dependencies]
pear_client = { path = "../..", features = ["http", "reqwest"] }
tokio = { version = "1.37.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
rustls = "0.21.10"
